--- a/CRM/CRM.Windows/CRM.Windows.csproj
+++ b/CRM/CRM.Windows/CRM.Windows.csproj
@@ -140,6 +140,9 @@
     <None Include="Service References\ServiceReference\DataWCF.xsd">
       <SubType>Designer</SubType>
     </None>
+    <None Include="Service References\ServiceReference\DataWCF1.xsd">
+      <SubType>Designer</SubType>
+    </None>
     <None Include="Service References\ServiceReference\DataWCF2.xsd">
       <SubType>Designer</SubType>
     </None>
