--- a/CRM/CRM.Windows/CRM.Windows.csproj
+++ b/CRM/CRM.Windows/CRM.Windows.csproj
@@ -123,6 +123,9 @@
     <Compile Include="MeetingPage.xaml.cs">
       <DependentUpon>MeetingPage.xaml</DependentUpon>
     </Compile>
+    <Compile Include="PopupBehavior.xaml.cs">
+      <DependentUpon>PopupBehavior.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Service References\ServiceReference\Reference.cs">
       <AutoGen>True</AutoGen>
@@ -143,6 +146,9 @@
       <DependentUpon>Reference.svcmap</DependentUpon>
     </None>
     <None Include="Service References\ServiceReference\CRM.ServiceReference.DataType.datasource">
+      <DependentUpon>Reference.svcmap</DependentUpon>
+    </None>
+    <None Include="Service References\ServiceReference\CRM.ServiceReference.FullMeetingData.datasource">
       <DependentUpon>Reference.svcmap</DependentUpon>
     </None>
     <None Include="Service References\ServiceReference\CRM.ServiceReference.ShortMeetingData.datasource">
@@ -194,6 +200,10 @@
     <Page Include="MeetingPage.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="PopupBehavior.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
     </Page>
     <Page Include="TaskPage.xaml">
       <SubType>Designer</SubType>
